12 марта 2019 г.
Исправлена обработка пустого оператора (;).

5 марта 2019 г.
Компилятор разделён на три модуля: Compiler, Scanner, Parser.

5 марта 2019 г.
Показан пример считывания диапазона множества {11..15}, лексема upto, приём 7FX

26 февраля 2019 г.
Начат синтаксический анализатор.

26 февраля 2019 г.
Лексический анализатор (сканер) частично готов.
Можно переходить к синтаксическому анализатору (парсеру).