@@ -1,5 +1,5 @@
 MODULE Parser;
-IMPORT Out, Files, S := Scanner;
+IMPORT Out, Files, S := Scanner, Gen := Generator;
 VAR sym: INTEGER;
 
 PROCEDURE Import;
@@ -7,9 +7,29 @@ BEGIN
   (* Здесь будет обработка IMPORT *)
 END Import;
 
+(* Объявления = [CONST {ОбъявлениеКонстант ";"}]
+		[TYPE {ОбъявлениеТипов ";"}]
+		[VAR {ОбъявлениеПеременных ";"}]
+		{ОбъявлениеПроцедуры ";"}.
+ОбъявлениеПеременных = Идентификаторы ":" Тип.
+Идентификаторы = Идентификатор {"," Идентификатор}.
+Тип = уточнИдент | ТипМассив | ТипЗапись | ТипУказатель | ПроцедурныйТип.
+Но в начале будет только VAR, поэтому используется упрощённый вариант:
+Объявления = [VAR {ОбъявлениеПеременных ";"}].
+ОбъявлениеПеременных = Идентификаторы ":" Тип.
+Идентификаторы = Идентификатор {"," Идентификатор}.
+Тип = Идентификатор. *)
 PROCEDURE Declarations;
+VAR x: Gen.Item;
 BEGIN
-  (* Здесь будет обработка CONST, TYPE, VAR и объявлений процедур *)
+  (* Псевдокод: *)
+  (* 1. Если считано слово VAR, то: *)
+  (* 2. Считать список идентификаторов и записать его в массив *)
+  (* 3. Считать двоеточие *)
+  (* 4. Считать тип *)
+  (*Type(x);*)
+  (* 5. Считать точку с запятой *)
+  (* 6. Если считан идентификатор, перейти к пункту 2 *)
 END Declarations;
 
 (* Операторы = Оператор {";" Оператор}.
