@@ -1,9 +1,8 @@
 MODULE Test;
 BEGIN
-  ;
-  xc := 666;
+	xc := 666;
 	a := 322;
-	b := 1;;
-  c := 16;
-	d := 17;
+	b := 1;
+	c := 16;
+	d := 17
 END Test.
