@@ -1,3 +1,9 @@
+25 марта 2019 г.
+Добавлены модули SymTable и Generator.
+Модуль символьной таблицы содержит типы Object и Type, а также экспортированные процедуры NewObj и Init.
+Модуль кодогенератора содержит только определение типа Item.
+В модуле синтаксического анализатора (Parser) написать псевдокод считывания объявления переменных в процедуре Declarations.
+
 12 марта 2019 г.
 Исправлена обработка пустого оператора (;).
 
